# kiro_trabajo_1

./: .gitignore  README.md  main.py  pyproject.toml
.kiro/specs/semantic-network-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
data/: .gitkeep  music_knowledge_base.json
docs/: alcance_y_limitaciones.md  estado_del_arte.md  estructura_documento.md  justificacion.md  objetivos.md  planteamiento_del_problema.md  preguntas_de_investigacion.md
src/: __init__.py
src/cli/: __init__.py  agent_cli.py
src/engine/: __init__.py  inference_engine.py  recommendation_engine.py
src/knowledge/: __init__.py  knowledge_builder.py
src/models/: __init__.py  data_models.py  enums.py  semantic_network.py
tests/: __init__.py
